    pasting from the Windows clipboard. (Wengier)
  - The mouse wheel movements will be automatically
    converted into up/down arrows by default for the
    intergrated DOS now. You can also enable it for
    the guest system from the "Main" menu ("mouse wheel
    movements" -> "Enable for guest systems also") or
    from the config file. (Wengier)
  - The command for showing the Configuration Tool has
    been renamed from "SHOWGUI" to "SHOWTOOL". A new
    command-line option -gui is added to CONFIG command
    to start the Configuration Tool as well. (Wengier)
  - DOSBox-X now includes ZIP.EXE and UNZIP.EXE from
    InfoZip which will appear on the Z drive. (Wengier)
  - The powerful SJGPLAY for DOS has been built into
    DOSBox-X. You can now find the CDPLAY.EXE program
    in the Z drive for playing Audio CDs in DOS, and a
    text file named CDPLAY.TXT for a quick usage guide.
    The zip package including full documentation and
    some extras will also appear as SJGPLAY.ZIP in the
    Z drive. This freeware program was written by Steve
    Gray and is now included in DOSBox-X with explicit
    permission of the author. (Wengier)
  - DOSBox-X will now by default show a quit warning
    if a DOS program or game, or a guest system is
    running. The previous behavior can be set with
    "quit warning=autofile". (Wengier)
  - The welcome banner when DOSBox-X starts has been
    improved for a better looking and should provide
    more helpful instructions for users. (Wengier)
  - Add new "Help" menu which includes menu items
    "Introduction", "DOSBox-X homepage", "DOSBox-X Wiki
    guide", "DOSBox-X support" and "About". (Wengier)
  - Improved the message when automatically re-running
    the executable which failed with the "Packed file
    is corrupt" error. Also added the "autoloadfix"
    config option which when set to "false" will not
    automatically re-run such programs. (Wengier)
  - The display for several section names in DOSBox-X's