@@ -20,6 +20,11 @@
     the guest system from the "Main" menu ("mouse wheel
     movements" -> "Enable for guest systems also") or
     from the config file. (Wengier)
+  - Added "Emulate CPU speed" menu group (under "CPU")
+    to emulate the speed of a specific CPU class. The
+    cycles to emulate are approximations of the actual
+    CPU hardware, and they are available thanks to data
+    provided by the user maximum105. (Wengier)
   - The command for showing the Configuration Tool has
     been renamed from "SHOWGUI" to "SHOWTOOL". A new
     command-line option -gui is added to CONFIG command
